--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>Portfolio Website</title>
 </head>
 <body>
-    <div id="hero">
+    <div id="home">
         <nav>
             <h2 class="logo">Jeri<span>cho</span></h2>
             <ul>
